# app/product/main.go
@@ -42,6 +42,7 @@ func main() {
 	productGroup := engine.Group("/product")
 	{
 		productGroup.POST("/list", api.ListProductsHandler(client))
+		productGroup.POST("/get", api.GetProductHandler(client))
 	}
 	// 启动 Gin 服务
 	ginPort := viper.GetString("gin.port")
